--- a/web/site.yml
+++ b/web/site.yml
@@ -8,7 +8,11 @@ baseurl: /gdscript-playground/
 repourl: https://github.com/williamd1k0/gdscript-playground
 twitter: "@tumeo_"
 
-version_function: https://faas-nyc1-2ef2e6cc.doserverless.co/api/v1/web/fn-f1a44419-c8a0-4cf5-b9af-d12c7a947ca8/godot/version
-gdscript_function: https://faas-nyc1-2ef2e6cc.doserverless.co/api/v1/web/fn-f1a44419-c8a0-4cf5-b9af-d12c7a947ca8/godot/gdscript
+version_function:
+  url: https://faas-nyc1-2ef2e6cc.doserverless.co/api/v1/web/fn-f1a44419-c8a0-4cf5-b9af-d12c7a947ca8/godot/version
+  token: Mz2zI7LVLWoGpbF
+gdscript_function:
+  url: https://faas-nyc1-2ef2e6cc.doserverless.co/api/v1/web/fn-f1a44419-c8a0-4cf5-b9af-d12c7a947ca8/godot/gdscript
+  token: Jn6dp2CsUuky8Ff
 
 ads_enabled: true
