--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,7 +3,7 @@ name: Deploy to Pages
 on:
   push:
     branches:
-      - "web-functions"
+      - "master"
     paths:
       - "web/**"
       - ".github/**"
