Add test function

--- a/functions/Makefile
+++ b/functions/Makefile
@@ -1,11 +1,12 @@
-GODOT_BIN := $(wildcard ./bin/Godot*.64)
+GODOT_BIN := $(wildcard ./bin/*.64)
 BIN_TARGET := packages/godot/gdscript/godot.bin
 VERSION_TARGET := packages/godot/version/godot_version.py
 
 all: ${BIN_TARGET} ${VERSION_TARGET}
 
 ${BIN_TARGET}: ${GODOT_BIN}
-	upx -9 -o $@ $<
+	rm -f -- $@
+	upx -9 --best -o $@ $<
 
 ${VERSION_TARGET}: ${GODOT_BIN}
-	printf 'GODOT_VERSION = "%s"' '$(shell $< --version)' > $@
+	printf 'GODOT_VERSION = "%s"' '$(shell $< --version | sed s/.custom_build//)' > $@
