--- a/functions/project.yml
+++ b/functions/project.yml
@@ -24,6 +24,11 @@ packages:
         environment: {}
         annotations: {}
         limits: {}
+  - name: gdscript
+    environment: {}
+    parameters: {}
+    annotations: {}
+    functions:
       - name: test
         binary: false
         main: ''
